Fix: Scrollbar colors.

--- a/app/assets/stylesheets/_site.scss
+++ b/app/assets/stylesheets/_site.scss
@@ -281,7 +281,12 @@ body, html {
     -webkit-text-size-adjust: none;
 }
 
+html {
+    overflow: hidden;
+}
+
 body {
+    overflow: auto;
     padding-left: env(safe-area-inset-left);
     padding-right: env(safe-area-inset-right);
     font-family: $font-stack;
@@ -1395,27 +1400,34 @@ Structure
     position: relative;
 }
 
-.scroll-bars.theme-dusk {
-    .feeds::-webkit-scrollbar,
-    .entries::-webkit-scrollbar,
-    .entry-content::-webkit-scrollbar {
-        -webkit-appearance: none;
-        width: 15px;
+.scroll-bars {
+    ::-webkit-scrollbar, &.settings-body::-webkit-scrollbar {
+        appearance: none;
+        width: 12px;
     }
-    .feeds::-webkit-scrollbar-thumb,
-    .entries::-webkit-scrollbar-thumb,
-    .entry-content::-webkit-scrollbar-thumb {
-        border: 3px solid map-get($color-contrast-300, dusk);
-        background-color: map-get($color-contrast-200, dusk);
-        border-radius: 9px;
+    ::-webkit-scrollbar-thumb, &.settings-body::-webkit-scrollbar-thumb {
+        border: 3px solid transparent;
+        @include border-color($color-contrast-200, $root: true);
+        @include background-color($color-contrast-400, $root: true);
+        border-radius: 6px;
         &:hover {
-            background-color: black;
+            @include background-color($color-contrast-500, $root: true);
         }
     }
-    .feeds::-webkit-scrollbar-track-piece,
-    .entries::-webkit-scrollbar-track-piece,
-    .entry-content::-webkit-scrollbar-track-piece {
-        background-color: map-get($color-contrast-300, dusk);
+    ::-webkit-scrollbar-track-piece, &.settings-body::-webkit-scrollbar-track-piece {
+        @include background-color($color-contrast-200, $root: true);
+    }
+
+    // Firefox
+    scrollbar-color: map-get($color-contrast-400, day) map-get($color-contrast-200, day);
+    &.theme-sunset {
+        scrollbar-color: map-get($color-contrast-400, sunset) map-get($color-contrast-200, sunset);
+    }
+    &.theme-dusk {
+        scrollbar-color: map-get($color-contrast-400, dusk) map-get($color-contrast-200, dusk);
+    }
+    &.theme-midnight {
+        scrollbar-color: map-get($color-contrast-400, midnight) map-get($color-contrast-200, midnight);
     }
 }
 
@@ -1785,11 +1797,14 @@ $hamburger-dot: 4px;
 
 .feeds {
     @include background-color($color-base);
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
     flex: 1;
     padding-top: 12px;
+    &.show {
+        overflow-y: auto;
+    }
     .has-offscreen-panels & {
         padding-top: 0;
     }
